# ICsergio

./: README.md
Bounding/: BoundingBoxTeste.cpp  CMakeLists.txt  CMakeLists.txt~  boundingbox.cpp  boundingbox.h  kernels.cu  myLib.hpp  spline.hpp  splineteste.cpp  transferFunction.hpp
Bounding.1.0/: BoundingBoxTeste.cpp  CMakeLists.txt  myLib.hpp  vectorAdd.cu
Bounding/cpp/: teste  teste.cpp
Bounding/cpp/tests/: test_c.cpp
Bounding/src/: teste
Cuda/: Makefile  Makefile~  teste  teste.cu  vectorAdd  vectorAdd.cu
PCL/: BoundingBoxTeste.cpp  CMakeLists.txt  CMakeLists.txt~  cloud_viewer.cpp  concatenate_clouds.cpp  narf_keypoint_extraction.cpp  normal_estimation_using_integral_images.cpp  pairwise_incremental_registration.cpp  pcd_read.cpp
PCL-CUDA/: BoundingBoxTeste.cu  CMakeLists.txt  CMakeLists.txt~  teste.cu
PCL/mapping-master/furniture_classification/: classification.launch
PCL/mapping-master/pcl_cloud_tools/launch/: extract_clusters.launch
